--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
       
     - name: Prettify code
       uses: creyD/prettier_action@v4.3
+      with:
+        prettier_options: --write **/*.{js,md,html}
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
