--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
       
-    - name: Prettify code
+    - name: ✨ Prettify code
       uses: creyD/prettier_action@v4.3
       with:
         prettier_options: --write **/*.{js,md,html}
+        github_token: ${{ secrets.token }}
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
