--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,4 @@ jobs:
         server: efps.ftp.infomaniak.com
         username: efps_e15
         password: ${{ secrets.password }}
+        dangerous-clean-slate: true
